# src/api/handlers/users.go
@@ -1,0 +1,51 @@
+package handlers
+
+import (
+	"net/http"
+
+	"github.com/AmirHosein-Kahrani/Car-Center-Web/api/dto"
+	"github.com/AmirHosein-Kahrani/Car-Center-Web/api/helper"
+	"github.com/AmirHosein-Kahrani/Car-Center-Web/config"
+	"github.com/AmirHosein-Kahrani/Car-Center-Web/services"
+	"github.com/gin-gonic/gin"
+)
+
+type UserHandler struct {
+	service *services.UserService
+}
+
+func NewUsersHandler(cfg *config.Config) *UserHandler {
+	service := services.NewUserService(cfg)
+	return &UserHandler{service: service}
+}
+
+// SendOtp godoc
+// @Summary Send Otp To User
+// @Description Send Otp To User
+// @Tags Users
+// @Accept json
+// @Produce json
+// @Param Request body dto.GetOtpRequest true "GetOtpRequest"
+// @Success 201 {object} helper.BaseHttpResponse "Success"
+// @Failure 400 {object} helper.BaseHttpResponse "Failed"
+// @Failure 409 {object} helper.BaseHttpResponse "Failed"
+// @Router /v1/users/send-otp [post]
+func (h *UserHandler) SendOtp(c *gin.Context) {
+	req := new(dto.GetOtpRequest)
+	err := c.ShouldBindJSON(&req)
+	if err != nil {
+		c.AbortWithStatusJSON(http.StatusBadRequest,
+			helper.GenerateBaseResponseWithValidationError(
+				nil, false, -1, err))
+		return
+	}
+	err = h.service.SetOtp(req)
+	if err != nil {
+		c.AbortWithStatusJSON(helper.TranslateErrorToStatusCode(err),
+			helper.GenerateBaseResponseWithError(
+				nil, false, -1, err))
+		return
+	}
+	// *Call internal SMS   Service
+	c.JSON(http.StatusCreated, helper.GenerateBaseResponse(nil, true, 0))
+}
