# src/api/routers/users.go
@@ -1,0 +1,15 @@
+package routers
+
+import (
+	"github.com/AmirHosein-Kahrani/Car-Center-Web/api/handlers"
+	"github.com/AmirHosein-Kahrani/Car-Center-Web/config"
+	"github.com/gin-gonic/gin"
+)
+
+func User(router *gin.RouterGroup, cfg *config.Config) {
+
+	var h = handlers.NewUsersHandler(cfg)
+
+	router.POST("/send-otp", h.SendOtp)
+
+}
